--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@types/styled-components": "^5.1.2",
     "gatsby": "^2.24.26",
     "gatsby-image": "^2.4.14",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-layout": "^1.3.10",
     "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-offline": "^3.2.21",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.24",
+    "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-filesystem": "^2.3.23",
     "gatsby-transformer-sharp": "^2.5.12",
     "gsap": "^3.5.0",
