--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@types/styled-components": "^5.1.2",
+    "async": "^3.2.0",
     "gatsby": "^2.24.26",
-    "gatsby-image": "^2.4.14",
+    "gatsby-image": "^2.4.16",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-layout": "^1.3.10",
     "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-offline": "^3.2.21",
     "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.24",
+    "gatsby-plugin-sharp": "^2.6.30",
     "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-filesystem": "^2.3.23",
-    "gatsby-transformer-sharp": "^2.5.12",
+    "gatsby-source-filesystem": "^2.3.27",
+    "gatsby-transformer-json": "^2.4.11",
+    "gatsby-transformer-sharp": "^2.5.13",
     "gsap": "^3.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
