--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@types/styled-components": "^5.1.2",
+    "@types/yup": "^0.29.6",
     "async": "^3.2.0",
+    "formik": "^2.1.5",
     "gatsby": "^2.24.26",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -25,8 +27,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-recaptcha": "^2.3.10",
     "styled-components": "^5.1.1",
-    "styled-reset": "^4.2.2"
+    "styled-reset": "^4.2.2",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "prettier": "2.0.5"
