--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@types/react-scroll": "^1.8.0",
     "@types/styled-components": "^5.1.2",
     "@types/yup": "^0.29.6",
     "async": "^3.2.0",
@@ -28,6 +29,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-recaptcha": "^2.3.10",
+    "react-scroll": "^1.8.1",
     "styled-components": "^5.1.1",
     "styled-reset": "^4.2.2",
     "yup": "^0.29.3"
