--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-recaptcha": "^2.3.10",
+    "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.1",
     "styled-components": "^5.1.1",
     "styled-reset": "^4.2.2",
