--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@types/react-helmet": "^6.1.0",
     "@types/react-scroll": "^1.8.0",
     "@types/styled-components": "^5.1.2",
     "@types/yup": "^0.29.6",
