--- a/package.json
+++ b/package.json
@@ -37,7 +37,16 @@
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.2",
+    "@types/jest": "^26.0.13",
+    "babel-jest": "^26.3.0",
+    "babel-preset-gatsby": "^0.5.9",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.4.2",
+    "prettier": "2.0.5",
+    "react-test-renderer": "^16.13.1",
+    "tslint-react": "^5.0.0"
   },
   "keywords": [
     "gatsby"
@@ -50,7 +59,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
