--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@types/react-helmet": "^6.1.0",
+    "@types/react-lazyload": "^2.6.0",
+    "@types/react-recaptcha": "^2.3.3",
     "@types/react-scroll": "^1.8.0",
     "@types/styled-components": "^5.1.2",
     "@types/yup": "^0.29.6",
@@ -29,9 +31,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-lazyload": "^3.0.0",
     "react-recaptcha": "^2.3.10",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.1",
+    "save": "^2.4.0",
     "styled-components": "^5.1.1",
     "styled-reset": "^4.2.2",
     "yup": "^0.29.3"
