--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/styled-components": "^5.1.2",
     "@types/yup": "^0.29.6",
     "async": "^3.2.0",
+    "axios": "^0.20.0",
     "formik": "^2.1.5",
     "gatsby": "^2.24.26",
     "gatsby-image": "^2.4.16",
